k8s/applications/backend/apigateway/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-ingress
  namespace: egov-msa
  labels:
    env: production
    tier: backend
    app: apigateway
    name: apigateway-ingress
spec:
  rules:
    - host: <백엔드 API 게이트웨이 도메인> # TODO
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: apigateway
                port:
                  number: 8000
